[package]
name = "makewiz"
version = "0.6.0"
authors = ["Michał Kallas"]
description = "MakeWiz is a command line tool that generates a Makefile based on the files in your directory"
homepage = "https://github.com/kallazz/makewiz"
repository = "https://github.com/kallazz/makewiz"
keywords = ["makefile", "generate"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
directories = "5.0.1"
serde = { version = "1.0.185", features = ["derive"] }
toml = "0.7.6"
